--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
     --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
 
     --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
+    --button-secondary-hover: #8e8a8a;
   }
 }
 
